--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.57.1",
+    "styled-components": "^5.3.6",
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@svgr/webpack": "^6.5.1"
+    "@svgr/webpack": "^6.5.1",
+    "@types/styled-components": "^5.1.26"
   }
 }
