--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
     "typescript": "4.9.4"
