--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "icomoon-react": "^3.0.0",
     "next": "13.1.6",
